--- a/index.html
+++ b/index.html
@@ -314,11 +314,11 @@
         <section data-aos="fade-up">
             <h2><i class="fas fa-heart-broken"></i> Things I Do</h2>
             <div class="hobbies-grid">
-                <div class="hobby-item">Coding in Silence</div>
+                <div class="hobby-item">Free Fire  Lover</div>
                 <div class="hobby-item">Late Night Walks</div>
-                <div class="hobby-item">Sad Melodies</div>
-                <div class="hobby-item">Photography</div>
-                <div class="hobby-item">Loneliness</div>
+                <div class="hobby-item">Fü©kîňg  My Enemy</div>
+                <div class="hobby-item">Technology</div>
+                <div class="hobby-item">I Hate Love💔</div>
             </div>
         </section>
         
