--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Md Jakariya Hasan's official page - Broken Heart Aesthetic.">
     <meta name="author" content="Md Jakariya Hasan">
-    <title>Jakariya Hasan | Heartbroken Enthusiast</title>
+    <title>Md Jakariya Hasan | Heartbroken Enthusiast</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&family=Playfair+Display:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
@@ -293,13 +293,13 @@
         <section data-aos="fade-up">
             <h2><i class="fas fa-link"></i> Find Me in the Dark</h2>
             <div class="link-grid">
-                <a href="https://www.facebook.com/jakariya41" class="link-btn" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.facebook.com/jakariya41jr" class="link-btn" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-facebook"></i> Facebook
                 </a>
                 <a href="https://www.tiktok.com/@jakariya41jr?_r=1&_t=ZS-935B76zMUfF" class="link-btn" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-tiktok"></i> TikTok
                 </a>
-                <a href="https://www.instagram.com/jakariya441?igsh=dXE3dGcwbTNuZjVx" class="link-btn" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.instagram.com/jakariya41jr?igsh=dXE3dGcwbTNuZjVx" class="link-btn" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-instagram"></i> Instagram
                 </a>
                 <a href="https://m.me/jakariya41" class="link-btn" target="_blank" rel="noopener noreferrer">
@@ -316,7 +316,7 @@
             <div class="hobbies-grid">
                 <div class="hobby-item">Free Fire  Lover</div>
                 <div class="hobby-item">Late Night Walks</div>
-                <div class="hobby-item">Fü©kîňg  My Enemy</div>
+                <div class="hobby-item">Fü©kîňg My Enemys</div>
                 <div class="hobby-item">Technology</div>
                 <div class="hobby-item">I Hate Love💔</div>
             </div>
@@ -333,13 +333,13 @@
         <section data-aos="fade-up">
             <h2><i class="fas fa-envelope-open-text"></i> Leave a Message</h2>
             <div class="link-grid">
-                <a href="mailto:mdjakariyahsan1@gmail.com" class="link-btn"><i class="fas fa-envelope"></i> Send an Email</a>
+                <a href="mailto:mdjakariyahsan10@gmail.com" class="link-btn"><i class="fas fa-envelope"></i> Send an Email</a>
                 <a href="tel:+8809638406092" class="link-btn"><i class="fas fa-phone"></i> Voice Call</a>
             </div>
         </section>
 
         <footer>
-            <p>© 2026 Jakariya Hasan. Built with 💔 and a lot of memories.</p>
+            <p>© 2026 Md Jakariya Hasan. Built with 💔 and a lot of memories.</p>
         </footer>
     </div>
 
