--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         <section data-aos="fade-up">
             <h2><i class="fas fa-envelope-open-text"></i> Leave a Message</h2>
             <div class="link-grid">
-                <a href="mailto:mdjakariyahsan10@gmail.com" class="link-btn"><i class="fas fa-envelope"></i> Send an Email</a>
+                <a href="mailto:mdjakariyahasan10@gmail.com" class="link-btn"><i class="fas fa-envelope"></i> Send an Email</a>
                 <a href="tel:+8809638406092" class="link-btn"><i class="fas fa-phone"></i> Voice Call</a>
             </div>
         </section>
