--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 <a href="https://www.instagram.com/jakariya41jr?igsh=dXE3dGcwbTNuZjVx" class="link-btn" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-instagram"></i> Instagram
                 </a>
-                <a href="https://m.me/jakariya41" class="link-btn" target="_blank" rel="noopener noreferrer">
+                <a href="https://m.me/jakariya41jr" class="link-btn" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-facebook-messenger"></i> Messenger
                 </a>
                 <a href="https://t.me/jakariya41jr" class="link-btn" target="_blank" rel="noopener noreferrer">
