--- a/index.html
+++ b/index.html
@@ -713,6 +713,32 @@
         </section>
 
         <section data-aos="fade-up" data-aos-delay="100">
+            <h2><i class="fas fa-fingerprint"></i> 
+                <span class="lang-en">Personal Manifesto & Digital Identity</span>
+                <span class="lang-bn hidden">ব্যক্তিগত ইশতেহার ও ডিজিটাল সত্তা</span>
+            </h2>
+
+            <div class="lang-en">
+                <p><strong>The Glitch in the Matrix:</strong> I exist in the spaces between lines of code and the beat of a broken heart. My digital footprint is not a cry for attention; it is an archive of survival.</p>
+                <p><strong>Code of Conduct:</strong></p>
+                <ul>
+                    <li><strong>Authenticity over Algorithm:</strong> I do not post to please the machine. I post to document the journey.</li>
+                    <li><strong>Digital Stoicism:</strong> I observe the noise of social media, but I do not let it consume my peace.</li>
+                    <li><strong>The Red Aesthetic:</strong> Red is not just a color. It is passion, pain, and the blood that runs through veins even when the heart feels cold.</li>
+                </ul>
+            </div>
+
+            <div class="lang-bn hidden">
+                <p><strong>ম্যাট্রিক্সের ত্রুটি:</strong> আমি কোডের লাইন এবং ভাঙা হৃদয়ের স্পন্দনের মাঝখানের শূন্যস্থানে বাস করি। আমার ডিজিটাল উপস্থিতি মনোযোগ পাওয়ার জন্য আর্তনাদ নয়; এটি টিকে থাকার এক দলিল।</p>
+                <p><strong>আচরণবিধি:</strong></p>
+                <ul>
+                    <li><strong>অ্যালগরিদমের ঊর্ধ্বে সত্যতা:</strong> আমি যন্ত্রকে খুশি করার জন্য পোস্ট করি না। আমি আমার যাত্রাপথ নথিবদ্ধ করি।</li>
+                    <li><strong>ডিজিটাল স্টয়িসিজম:</strong> আমি সোশ্যাল মিডিয়ার কোলাহল দেখি, কিন্তু তা আমার শান্তি নষ্ট করতে দিই না।</li>
+                    <li><strong>লাল নান্দনিকতা:</strong> লাল কেবল একটি রঙ নয়। এটি আবেগ, বেদনা এবং সেই রক্ত যা শিরায় প্রবাহিত হয়, এমনকি যখন হৃদয় বরফের মতো শীতল।</li>
+                </ul>
+            </div>
+        </section>
+        <section data-aos="fade-up" data-aos-delay="100">
             <h2><i class="fas fa-link"></i> 
                 <span class="lang-en">Find Me in the Dark</span>
                 <span class="lang-bn hidden">অন্ধকারে আমায় খুঁজুন</span>
@@ -1021,4 +1047,4 @@
         });
     </script>
 </body>
-            </html>
+                </html>
